syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "RouteGuideProto";
option java_package = "de.qaware.rookie.cloud.grpc.proto";

package routeguide;

service RouteGuide {
   // Obtains the feature at a given position.
   rpc GetFeature(Point) returns (Feature) {}
}

message Point {
    int32 latitude = 1;
    int32 longitude = 2;
}

message Rectangle {
  // One corner of the rectangle.
  Point lo = 1;

  // The other corner of the rectangle.
  Point hi = 2;
}

message Feature {
  // The name of the feature.
  string name = 1;

  // The point where the feature is detected.
  Point location = 2;
}